# matrix

./: CMakeLists.txt  README.md  double_compare.cpp  main.cpp  matrix.hpp
.github/: workflows.yml
.github/workflows/: workflow.yml
inc/: buffer.hpp  double_compare.hpp  matrix.hpp
src/: double_compare.cpp  main.cpp
tests/: CMakeLists.txt
tests/end_to_end/: answer.out  matrix_generate.py  test_01.in  test_02.in  test_03.in  test_04.in  test_05.in  test_06.in  test_07.in  test_08.in  test_09.in  test_10.in
tests/unit/: controllable.hpp  unit_test.cpp
